test/fixtures/web-platform-tests/resources/webidl2/test/invalid/idl/record-single.widl
interface Foo {
  void foo(record<DOMString> param);
};
